# biolith

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  format.yml  publish.yml  test.yml
biolith/benchmarks/: occu_spoccupancy.py
biolith/evaluation/: __init__.py  deviance.py  diagnostics.py  log_likelihood.py  lppd.py  posterior_predictive_check.py  residuals.py  waic.py
biolith/models/: __init__.py  nmixture.py  occu.py  occu_comb.py  occu_cop.py  occu_cs.py  occu_jags.py  occu_rn.py  occu_stan.py  occu_torch.py
biolith/regression/: __init__.py  abstract.py  bart.py  linear.py  mlp.py
biolith/utils/: __init__.py  data.py  distributions.py  fit.py  grid_search.py  misc.py  modeling.py  ppc.py  predict.py  spatial.py
docs/: api.rst  conf.py  index.rst
scripts/: check.sh  format.sh  install_precommit.sh  pre-commit
